@@ -1,4 +1,4 @@
 DIST kxstitch-0.8.tar.bz2 992146 RMD160 3f38c3f96452b6a0b8d01b03f5fef7f84a2f7823 SHA1 da28607290b6837fb0aeae24f1e0bac31ad7c71f SHA256 13ed87d05237565e5a845edc2b60c858d6e5302f830709da6099847cf2cd13b1
-EBUILD kxstitch-0.8.ebuild 812 RMD160 d93a9c517c6688f5318fce3c856c7831399d5d32 SHA1 baf07ed4a83e1e24f25de78263baeb6493127aaf SHA256 d8a6898438884c82cf8297d13232042bb8723dfd71938bb176926dd7d7133c77
-MISC ChangeLog 359 RMD160 39bb080a553618317f92e467767d875ea600e6bf SHA1 50acbbb332b84380dde393584c087d8edbe81db6 SHA256 01ae2094788905a0571236f3bd038a4139034f81a7944eb1788e42825c26ad86
+EBUILD kxstitch-0.8.ebuild 496 RMD160 d0ff90392b210b7fe9abd322de19915a3a0939a0 SHA1 c788b02973690878866716b815deff68dc8804b3 SHA256 c99d3dce5a6c5d4e6f4ebed02a9cf51a72939ac3d4f6fa1ec8ae7ef899807a47
+MISC ChangeLog 487 RMD160 13a6447321841f625ed726d39552aac2954e3a57 SHA1 c3be9da31490b859846513e96c4e3aafe302ee98 SHA256 489e9b6fd895c00635ad387cb2d0585d3deb9a2be52f18cea22e2c5dd7e77cb6
 MISC metadata.xml 811 RMD160 593413b7c785c1f34c8424ba1b0a3e53d561b018 SHA1 bae33c9df69dfe29cb35df89122ac3f4c95f91ac SHA256 3b235d8eff27c6dd64f2fd62b0b0cd2f93425cf7565438cb46576a808230feb1
