@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/kxstitch
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  20 Apr 2009; Christian Ruppert <idl0r@gentoo.org> kxstitch-0.8.ebuild:
+  Replaced build_with_use by EAPI 2 USE dependencies.
 
   11 Sep 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> metadata.xml:
   Fix metadata.xml
